@@ -88,6 +88,17 @@ import|;
 end_import
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|TimeUnit
+import|;
+end_import
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -157,6 +168,23 @@ operator|.
 name|impl
 operator|.
 name|HttpSolrServer
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|client
+operator|.
+name|solrj
+operator|.
+name|request
+operator|.
+name|CollectionAdminRequest
 import|;
 end_import
 begin_import
@@ -961,6 +989,50 @@ operator|+
 literal|3
 argument_list|)
 expr_stmt|;
+comment|// try to clean up
+try|try
+block|{
+name|CollectionAdminRequest
+name|req
+init|=
+operator|new
+name|CollectionAdminRequest
+operator|.
+name|Delete
+argument_list|()
+decl_stmt|;
+name|req
+operator|.
+name|setCollectionName
+argument_list|(
+name|testCollectionName
+argument_list|)
+expr_stmt|;
+name|req
+operator|.
+name|process
+argument_list|(
+name|cloudClient
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+comment|// don't fail the test
+name|log
+operator|.
+name|warn
+argument_list|(
+literal|"Could not delete collection {} after test completed"
+argument_list|,
+name|testCollectionName
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 DECL|method|testRf3
 specifier|protected
@@ -1153,6 +1225,50 @@ argument_list|,
 literal|4
 argument_list|)
 expr_stmt|;
+comment|// try to clean up
+try|try
+block|{
+name|CollectionAdminRequest
+name|req
+init|=
+operator|new
+name|CollectionAdminRequest
+operator|.
+name|Delete
+argument_list|()
+decl_stmt|;
+name|req
+operator|.
+name|setCollectionName
+argument_list|(
+name|testCollectionName
+argument_list|)
+expr_stmt|;
+name|req
+operator|.
+name|process
+argument_list|(
+name|cloudClient
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+comment|// don't fail the test
+name|log
+operator|.
+name|warn
+argument_list|(
+literal|"Could not delete collection {} after test completed"
+argument_list|,
+name|testCollectionName
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 DECL|method|testRf3WithLeaderFailover
 specifier|protected
@@ -1576,13 +1692,37 @@ operator|.
 name|reopen
 argument_list|()
 expr_stmt|;
-name|Thread
+name|long
+name|timeout
+init|=
+name|System
 operator|.
-name|sleep
+name|nanoTime
+argument_list|()
+operator|+
+name|TimeUnit
+operator|.
+name|NANOSECONDS
+operator|.
+name|convert
 argument_list|(
-literal|10000L
+literal|60
+argument_list|,
+name|TimeUnit
+operator|.
+name|SECONDS
 argument_list|)
-expr_stmt|;
+decl_stmt|;
+while|while
+condition|(
+name|System
+operator|.
+name|nanoTime
+argument_list|()
+operator|<
+name|timeout
+condition|)
+block|{
 name|cloudClient
 operator|.
 name|getZkStateReader
@@ -1593,6 +1733,37 @@ argument_list|(
 literal|true
 argument_list|)
 expr_stmt|;
+name|List
+argument_list|<
+name|Replica
+argument_list|>
+name|activeReps
+init|=
+name|getActiveOrRecoveringReplicas
+argument_list|(
+name|testCollectionName
+argument_list|,
+literal|"shard1"
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|activeReps
+operator|.
+name|size
+argument_list|()
+operator|==
+literal|2
+condition|)
+break|break;
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+literal|1000
+argument_list|)
+expr_stmt|;
+block|}
 name|List
 argument_list|<
 name|Replica
@@ -1699,13 +1870,6 @@ operator|.
 name|getClusterState
 argument_list|()
 decl_stmt|;
-name|cs
-operator|=
-name|zkr
-operator|.
-name|getClusterState
-argument_list|()
-expr_stmt|;
 name|assertNotNull
 argument_list|(
 name|cs
